# SAM-2.1-onnx-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  export_all_sam2_models.py  pyproject.toml  sam2_base_plus.onnx  sam2_large.onnx  sam2_small.onnx  sam2_tiny.onnx
.github/workflows/: deploy-hf-space.yml
sam2_server/: Cargo.toml
sam2_server/src/: main.rs  shared.rs
sam2_server/static/: index.html
