[workspace]
resolver = "2"
members = [
  "sam2_server",
  # existing crate left out intentionally: sam2_ort_demo
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8.4", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
utopia = "0.0.0"
utoipa = { version = "5", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
ort = { version = "2.0.0-rc.10", features = ["download-binaries", "ndarray"] }
ndarray = "0.16"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
axum-prometheus = "0.6"
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
base64 = "0.22"

