[project]
name = "sam-onnx"
version = "0.1.0"
description = "SAM2 utilities and ONNX export helpers"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"
license = { text = "MIT" }

# Core runtime dependencies inferred from the codebase
# Torch and video IO are optional to keep base env portable on macOS x86_64.
dependencies = [
  "numpy",
  "pillow",
  "tqdm",
  "hydra-core",
  "pyyaml",
  "onnx",
  "onnxruntime",
  "huggingface_hub",
]

[project.optional-dependencies]
# Video reading via Decord is optional because macOS wheels are not provided upstream.
video = ["decord"]
# PyTorch is optional due to limited macOS x86_64 wheels; install with: `uv pip install .[torch]`
torch = ["torch", "torchvision"]

[project.urls]
Homepage = "https://example.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sam2"]


