[project]
name = "sam-onnx"
version = "0.1.0"
description = "SAM2 utilities and ONNX export helpers"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"
license = { text = "MIT" }

# Core runtime dependencies for export and inference
dependencies = [
  "numpy<2",
  "pillow",
  "tqdm",
  "hydra-core",
  "pyyaml",
  "onnx",
  "onnxruntime",
  "huggingface_hub",
  "iopath",
  "torch",
  "torchvision",
]

[project.optional-dependencies]
# Video reading via Decord is optional because macOS wheels are not provided upstream.
video = ["decord"]

[project.urls]
Homepage = "https://example.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sam2"]


