[package]
name = "sam2_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
ort = { workspace = true }
ndarray = { workspace = true }
image = { workspace = true }
axum-prometheus = { workspace = true }

bytes = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }

